--- a/webapp/i18n/i18n.properties
+++ b/webapp/i18n/i18n.properties
@@ -17,3 +17,4 @@ flpSubtitle=Aplicación Fiori de Ordenes
 #Mensajes de error
 errorDelete=Debe seleccionar un detalle de orden
 confirmacionBorrado=Seguro desea eliminar el registro?
+confirmacionUpdate=Seguro desea actualizar el registro?
